# PyPerl5

./: .dockerignore  .gitignore  MANIFEST.in  Makefile  README.md  README.rst  meta.py  setup.cfg  setup.py  tox.ini
.github/workflows/: tox.yml
docker/centos7/: Dockerfile
docker/centos8/: Dockerfile
perl/: MANIFEST  Makefile.PL  Proxy.xs
perl/lib/PyPerl5/: Boolean.pm  Loader.pm  Proxy.pm  Util.pm
perl5/: __init__.py  vm.py
perl5/_lib/: _perl.pyi
perl5/vendor_perl/: __init__.py
src/: config.h  dlfcn.pxd  perl5.pxd  perl5module.pyx  perl5util.c  perl5util.h  type_convert.pyx
test/: __init__.py  template.py  test_basic_types.py  test_itrheads.py  test_math.py  test_perl_side_proxy.py  test_return_values.py
tests/: test_basic_types.py  test_context_manager.py  test_fork.py  test_itrheads.py  test_perl_side_proxy.py  test_return_values.py  test_type.py
