[metadata]
name = py-perl5
author = Yasunori Fujie
author_email = fuji@dmgw.net
description = Perl 5 integration for python
long_description = file: README.md
license = Apache License, Version 2.0
url = https://github.com/yacchi/PyPerl5
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*

[options]
packages = find:
setup_requires=
    pytest-runner
    Cython
tests_require=
    pytest
zip_safe = False
include_package_data = True

[options.packages.find]
exclude =
    tests

[options.package_data]
perl5 =
    vendor_perl/PyPerl5/*.pm
    vendor_perl/auto/PyPerl5/*.*
    _lib/*.so
    _lib/*.dll

[aliases]
test=pytest

[tool:pytest]
; addopts = --durations=10
addopts = --capture=no --verbose --import-mode=append
testpaths = tests
python_files = test_*.py
