[metadata]
name = py-perl5
version = attr:meta.VERSION
author = Yasunori Fujie
author_email = fuji@dmgw.net
description = Perl 5 integration for python
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License, Version 2.0
url = https://github.com/yacchi/PyPerl5
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*

[options]
packages = find:
setup_requires=
    pytest-runner
    Cython
tests_require=
    pytest
    tox
zip_safe = False
include_package_data = True

[options.packages.find]
exclude =
    tests

[options.package_data]
perl5 =
    vendor_perl/PyPerl5/*.pm
    vendor_perl/auto/PyPerl5/*.*

[aliases]
test=pytest

[tool:pytest]
; addopts = --durations=10
addopts = --capture=no --verbose --import-mode=append --rootdir=tests
testpaths = tests
python_files = test_*.py
